GNOME Bugzilla – Bug 729798
glvideomixer: Does not support positioning of input streams
Last modified: 2014-06-15 02:30:15 UTC
It seems glvideomixer does not support positioning the input streams at all. It should probably use the same methods as the software videomixer element.
Example pipeline for OS X: gst-launch-1.0 mix. ! queue ! glimagesink \ gltestsrc pattern=black ! video/x-raw,width=1280,height=800 ! queue name=background \ avfvideosrc device-index=0 ! video/x-raw,width=1280,height=720 ! glcolorscale ! video/x-raw,width=640,height=720 ! queue name=left \ avfvideosrc device-index=0 ! video/x-raw,width=1280,height=720 ! glcolorscale ! video/x-raw,width=640,height=720 ! queue name=right \ background. ! mix.sink_0 \ left. ! mix.sink_1 \ right. ! mix.sink_2 glvideomixer name=mix sink_2::xpos=640
commit 5a6bef5c59aa08b119fed832d203a9df5b0e2899 Author: Matthew Waters <ystreet00@gmail.com> Date: Sun Jun 15 12:26:21 2014 +1000 glvideomixer: add positioning of input streams https://bugzilla.gnome.org/show_bug.cgi?id=729798