glvideomixer: add positioning of input streams

https://bugzilla.gnome.org/show_bug.cgi?id=729798