ext/gl/gstglvideomixer.h
@@ -22,6 +22,7 @@
 #define _GST_GL_VIDEO_MIXER_H_
 
 #include <gst/gl/gstglmixer.h>
+#include <gst/gl/gstglmixerpad.h>
 
 G_BEGIN_DECLS
 
